# ESM2AE

./: OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  train.py  train_bak.py  train_ray.py
model/backbone/: esm2ae.py
model/dataloader/: DataPipe.py
model/utils/: ActivationFunction.py  ModelSave.py  MyLRCallback.py  Simclr.py  Whitening.py
outputs/2025-06-05/14-37-39/.hydra/: config.yaml  hydra.yaml
tests/: test_data_loading.py
tools/: fasta2lmdb.py  fasta2lmdb_optimized.py  fasta2webdataset.py  fasta_filter.py  lmdb_read.py  performance_benchmark.py  sequence_analysis.py
train_config/: README_HARDWARE_CONFIGS.md  ZERO2_2080super.yaml  ZERO2_3080.yaml  ZERO2_FP16.yaml  ZERO2_optimized.yaml  ZERO2_with_checkpointing.yaml  switch_config.py  train_config_2080super.yaml  train_config_3080.yaml  trainer_config.yaml
