[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "model"}
packages = []

[project]
name = "esm2ae"
version = "0.1.0"
description = "An Autoencoder for Protein Sequences based on ESM-2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20.3",
    "biopython>=1.83",
    "datasets>=2.14.5",
    "deepspeed>=0.11.1",
    "hydra-core>=1.3.2",
    "numpy>=1.26.1",
    "pandas>=2.1.1",
    "ray[train]>=2.7.0",
    "scikit-learn>=1.3.1",
    "torch>=2.1.0",
    "transformers>=4.34.0",
    "wandb>=0.15.12",
    "webdataset>=0.2.85", # Added webdataset
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2", # Added pytest for testing
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
